--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -23,19 +23,12 @@
 	year = {2009}
 	}
 
-@misc{rtoal,
-	author = {Ray Toal},
-	title = {Red Black Trees},
-	howpublished = {\url{http://cs.lmu.edu/~ray/notes/redblacktrees/}},
-}
-
 @book{tcormen,
 	author = {Thomas H. Cormen, Charles E. Leiserson},
 	title = {Algorithmen - Eine Einf{\"u}hrung},
 	publisher = {Oldenbourg Wissenschaftsverlag GmbH},
 	year = {2013},
 	isbn = {978-3-486-74861-1},
-	note = {{ISBN:} 978-3-486-74861-1}
 }
 
 @book{mpinedo,
@@ -71,3 +64,12 @@
  edition = {3rd},
  publisher = {Addison-Wesley Professional},
 } 
+
+@article{usenix,
+	author = {Jason Nieh and Chris Vaill and Hua Zhong},
+	title = {Virtual-Time Round-Robin: An O(1) Proportional Share Scheduler},
+	journal = {USENIX Association Proceedings of the 2001 USENIX Annual Technical Conference},
+	year = {2001},
+}
+
+
