--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -36,8 +36,8 @@
 % Section-Überschriften werden in GROSSBUCHSTABEN umgestellt
 \section{Einleitung}
 
-Das Gummibärchen war schon immer ein Quell der Freude für Jung
-und Alt, vgl. \cite{mingo,mjones}.
+%Das Gummibärchen war schon immer ein Quell der Freude für Jung
+%und Alt, vgl. \cite{mingo,mjones}.
 
 \section{Grundlagen zum Scheduling}
 \input{sections/scheduling}
